mis a jour du style

--- a/src/styles/partials/_content-accueil.scss
+++ b/src/styles/partials/_content-accueil.scss
@@ -1,6 +1,6 @@
 #content-accueil {
   .presentation {
-    background-image: url("../../../public/presentation-img.png");
+    background-image: url("/presentation-img.png");
     background-size: cover;
     background-position: center;
     height: 70vh;
